# scrape_zakupki2

./: .gitignore  README.md  _test.py  pyproject.toml
src/scrape_zakupki2/: __init__.py  __init__.pyi  load.py  main.py  utils.py
src/scrape_zakupki2/links/: home_page.txt  load_link.txt
